// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers reducers delete customer 1`] = `
Immutable.Map {
  "active": Immutable.Map {},
  "items": Immutable.List [
    Immutable.Map {
      "id": 1,
    },
  ],
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "active": false,
      "merge": false,
    },
  },
}
`;

exports[`customers reducers fetch customer 1`] = `
{
  "_internal": {
    "loading": {
      "active": true,
      "merge": false,
    },
  },
  "active": {},
  "items": [],
}
`;

exports[`customers reducers fetch customer 2`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
  },
  "items": [],
}
`;

exports[`customers reducers fetch customer 3`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {},
  "items": [],
}
`;

exports[`customers reducers merge customers 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": true,
    },
  },
  "active": {},
  "items": [],
}
`;

exports[`customers reducers merge customers 2`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Alex",
  },
  "items": [],
}
`;

exports[`customers reducers merge customers 3`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Romain",
  },
  "items": [],
}
`;

exports[`customers reducers submit customer 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {},
  "items": [],
}
`;

exports[`customers reducers submit customer 2`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Romain",
  },
  "items": [
    {
      "id": 1,
      "name": "Romain",
    },
  ],
}
`;

exports[`customers reducers submit customer 3`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Romain",
  },
  "items": [
    {
      "id": 1,
      "name": "Romain",
    },
  ],
}
`;

exports[`customers reducers submit customer 4`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "merge": false,
    },
  },
  "active": {},
  "items": [],
}
`;
